# SimpleCalculator

./: .gitignore  CMakeLists.txt  README.md
inc/: operations.h
src/: main.cpp  operations.cpp
test/: tests_operations.cpp
